--- a/app/views/jobs.scala.html
+++ b/app/views/jobs.scala.html
@@ -3,10 +3,10 @@
 
 @main("Studiraj > Zaposli se") {
 
-	<div class="col-lg-3 left">
+	<div class="col-lg-4 left">
 		<div class="dropdown">
 		  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-		    Zanimanja
+		    Područje znanosti
 		    <span class="caret"></span>
 		  </button>
 		  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -33,13 +33,16 @@
 	  		</div>
 	  	</div>
 	</div>
-	<div class="col-lg-9 right">
-		<div class="well well-sm"><h2>Zanimanje: @message</h2></div>
+	<div class="col-lg-8 right">
+		<div class="well well-sm">
+			<h2>Poslovi iz oblasti: @message</h2>
+			<h3>Pripadajuća kategorija: @jobs.get(0).getCategory()</h3>
+		</div>
 		<table class="table table-striped table-bordered table-condensed table-hover">
 			<thead>
 		      <tr>
-		        <th>Naziv</th>
-		        <th>Kategorija</th>
+		        <th>Trenutno objavljeni poslovi</th>
+		        <!-- <th>Kategorija</th>> -->
 		        <!-- <th>Link</th> -->
 		        <!-- <th>city</th> -->
 		      </tr>
@@ -50,7 +53,7 @@
 					@for(job <- jobs) {
 						<tr>
 							<td><a href="@job.getLink()" target="_blank">@job.getTitle()</a></td>
-							<td>@job.getCategory()</td>
+							
 							<!-- <td>Link na oglas</td> -->
 						</tr>	
 					}
