--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,6 +12,7 @@
         @* Here's where we render the page title `String`. *@
         <title>@title</title>
         <link rel='stylesheet' type="text/css" href='@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")'>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
@@ -21,11 +22,37 @@
          * the page content. *@
          <nav class="navbar navbar-default">
          	<div class="container-fluid">
-		      <a class="navbar-brand" href="/" style="float: none;position: absolute;width: 100%;left: 0;top: 0;text-align: center;margin: auto;height:100%;">Studiraj > Zaposli se</a>
+				<div class="navbar-header">
+			      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			      </button>
+			      <a class="navbar-brand" href="/">Početna</a>
+			    </div>
+			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			      <ul class="nav navbar-nav">
+			        <li><a href="#">HZZ</a></li>
+			        <li><a href="#">Open Data HR</a></li>
+			      </ul>
+			      <form class="navbar-form navbar-left" role="search">
+			        <div class="form-group">
+			          <input type="text" class="form-control" placeholder="Pretraga...">
+			        </div>
+			        <button type="submit" class="btn btn-default">Pretraži</button>
+			      </form>
+			      <ul class="nav navbar-nav navbar-right">
+			        <li><a href="#">Kontakt</a></li>
+			      </ul>
+			    </div>
 		    </div>
          </nav>
         <div class="container">
             <div class="row">
+            	<div class="col-lg-12">
+            		<img src='@routes.Assets.versioned("images/logo.png")' alt="" style="max-width:100%; padding-bottom:15px">
+            	</div>
             	@content
             </div>
         </div>
